# otus_homework_08

./: CMakeLists.txt  Doxyfile  README.md  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  assignments_8h.html  assignments_8h__dep__incl.map  assignments_8h__dep__incl.md5  assignments_8h__incl.map  assignments_8h__incl.md5  assignments_8h_source.html  async.cpp  classbulk_1_1_handler-members.html  classbulk_1_1_handler.html  classbulk_1_1_state_base-members.html  classbulk_1_1_state_base.html  classbulk_1_1_state_base__coll__graph.map  classbulk_1_1_state_base__coll__graph.md5  classbulk_1_1_state_base__inherit__graph.map  classbulk_1_1_state_base__inherit__graph.md5  classbulk_1_1_state_dynamic-members.html  classbulk_1_1_state_dynamic.html  classbulk_1_1_state_dynamic__coll__graph.map  classbulk_1_1_state_dynamic__coll__graph.md5  classbulk_1_1_state_dynamic__inherit__graph.map  classbulk_1_1_state_dynamic__inherit__graph.md5  classbulk_1_1_state_empty-members.html  classbulk_1_1_state_empty.html  classbulk_1_1_state_empty__coll__graph.map  classbulk_1_1_state_empty__coll__graph.md5  classbulk_1_1_state_empty__inherit__graph.map  classbulk_1_1_state_empty__inherit__graph.md5  classbulk_1_1_state_static-members.html  classbulk_1_1_state_static.html  classbulk_1_1_state_static__coll__graph.map  classbulk_1_1_state_static__coll__graph.md5  classbulk_1_1_state_static__inherit__graph.map  classbulk_1_1_state_static__inherit__graph.md5  (+87 more)
.github/workflows/: release.yml
async/: CMakeLists.txt  async.h  logger.cpp
demo/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_1.js  (+3 more)
src_/: CMakeLists.txt
unit-tests/: CMakeLists.txt  gtest_async.cpp  gtest_handler.cpp
